--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "2025-frontend-test",
+  "name": "multistep-plan-subscription",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node backend/server.js"
+    "start": "node backend/server.js",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
