exact node version

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "multistep-plan-subscription",
   "version": "1.0.0",
+  "engines": {
+    "node": "22.15.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
-  },
-  "engines": {
-    "node": ">=22.15.0 <23.0.0"
   },
   "keywords": [],
   "author": "",
